# SBND_SN_Readout

./: .gitignore  README.md  macro_test_ping.sh  servers.txt
baseline/: channel_analysis_results.csv  channel_config.fcl  channel_map.csv  convert_csv_to_fcl.py  make_hist.py  make_plots.ipynb
baseline/fcl/: BEAMOFF_NEWTRIGMASK8VALUE_AllSEBs_huffmanOff_ADCValuesto20_InconNoisyChannelsseb06_EXT500mHz_Prescale1_SWTrigger_2Stream_1903OptimisedQueuesZeroSupPars_newSEBs_newbl_NUMItiming2002.fcl  SBND_NevisTPCFEM.cpp  SBND_NevisTPCFEM_mod.cpp
baseline/fcl_files/: crate1.txt  crate10.txt  crate10new.txt  crate11.txt  crate11new.txt  crate1new.txt  crate2.txt  crate2new.txt  crate3.txt  crate3new.txt  crate4.txt  crate4new.txt  crate5.txt  crate5new.txt  crate6.txt  crate6new.txt  crate7.txt  crate7new.txt  crate8.txt  crate8new.txt  crate9.txt  crate9new.txt
decoders/: README.md  binnu  binp31  binp32  binsn  decodeNU.cpp  decodeSN.cpp  process3.1.cpp  process3.2.cpp
decoders/decode_NU/: decodeNu.cpp  run.sh
decoders/eric_decoder/: CMakeLists.txt  README.md
decoders/eric_decoder/app/: CMakeLists.txt  decodeNU.cpp  decodeSN.cpp
decoders/eric_decoder/lib/nu/: CMakeLists.txt  LinkDef.hh
decoders/eric_decoder/lib/nu/include/: channelNU.hh  femNU.hh
decoders/eric_decoder/lib/nu/src/: channelNU.cc  femNU.cc
decoders/eric_decoder/lib/sn/: CMakeLists.txt  LinkDef.hh
decoders/eric_decoder/lib/sn/include/: channelSN.hh  femSN.hh
decoders/eric_decoder/lib/sn/src/: channelSN.cc  femSN.cc
decoders/eric_decoder/lib/utils/: CMakeLists.txt
decoders/eric_decoder/lib/utils/include/: utility.hh
decoders/eric_decoder/lib/utils/src/: utility.cc
decoders/eric_decoder/python/: dataChecks.py  getMetric.py  logDataCheckNU.py  logDataCheckSN.py  plotDataCheckNU.py  plotDataCheckSN.py  utils.py  writeToLog.py
monitoring/: README.md  disk_monitor.py  disk_monitor.sh  plot_DMA.ipynb  plot_DMA_final.ipynb
nitrocris/: daq_removed_folders.list
notes/: plans_March_BeamDownTime.md
snews/: README.md  saveSNEWSAlertBinFiles.py  sbndSNEWSAlertTest.txt  sbndSNEWSClient.py  sbndSNEWSEmail.py  sbndSNEWSServer.py
tools/: waveformplotter.py
(+7 files in other folders)
